--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1769
 include_dir  = Marlin
 
 #
@@ -326,7 +326,7 @@ board     = nxp_lpc1769
 # HAL/STM32 Base Environment values
 #
 [common_stm32]
-platform      = ststm32@~6.1.0
+platform      = ststm32@<6.2.0
 platform_packages = framework-arduinoststm32@>=4.10700,<4.10800
 lib_deps      = ${common.lib_deps}
 lib_ignore    = SoftwareSerial
